[package]
name = "ruma-client-test"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
futures = "0.1"
rpassword = "2.1.0"
ruma-client = {git = "https://github.com/drozdziak1/ruma-client", branch="client-refactor"}
ruma-events = "0.11.0"
ruma-identifiers = "0.11.0"
tokio = "0.1"
